# memo

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: bird-pet-ci.yml
bird-pet/: .gitignore  CONTRIBUTING.md  README.md  biome.json  bubble.html  index.html  memory-card.html  memory-panel.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
bird-pet/public/: manifest.json
bird-pet/src/: bubble-entry.ts  bubble.css  config.ts  constants.ts  events.ts  main.ts  memory-card-entry.ts  memory-card.css  memory-panel-entry.ts  memory-panel.css  style.css  types.ts  utils.ts
bird-pet/src-tauri/: 2  Cargo.toml  tauri.conf.json
bird-pet/src-tauri/capabilities/: default.json
bird-pet/src-tauri/src/: app_builder.rs  lib.rs  main.rs  shutdown_state.rs
bird-pet/src/app/: business-events.ts  lifecycle.ts  menu-items.ts  runtime.ts  startup-flow.ts  types.ts
bird-pet/src/core/: animation.ts  bubble-manager.ts  click-through.ts  dirty-shutdown.ts  effects.ts  interaction.ts  memory.ts  menu.ts  message-queue.ts  storage.ts  updater.ts
bird-pet/src/features/: context-awareness.ts  dialogue-engine.ts  greeting.ts  hourly-chime.ts  idle-care.ts  memory-card.ts  memory-panel.ts  messages.ts  (+4 more)
bird-pet/tests/: bubble-manager.test.ts  context-awareness.test.ts  dialogue-engine.test.ts  dirty-shutdown.test.ts  events.test.ts  memory-card.test.ts  memory-system.test.ts  message-queue.test.ts  pomodoro.test.ts  quiet-mode.test.ts  shutdown.test.ts  special-dates.test.ts  storage.test.ts  system-monitor.test.ts  updater.test.ts
